--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
     transform: translateX(-50px);
     transition: transform 0.5s ease, opacity 2s ease;
     /* transition-delay: 1s; */
+    cursor: pointer;
 }
 
 .card.in-view {
